@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8" ?>
 
 <project name="Commons" basedir="." default="Addon.test">
-    <property name="version" value="1.6.8" />
+    <property name="version" value="1.6.9" />
     <property name="commons.lib.directory" value="lib" />
     <import file="../tools/targets.xml" />
 
