@@ -1,7 +1,7 @@
 (function(e){var a={validateBoolean:function(a){return"True"===a},validateInteger:function(b){var c={isValid:!1,value:NaN};if(a.isStringEmpty(b))return c;b=parseInt(b,10);if(isNaN(b))return c;c.isValid=!0;c.value=b;return c},validatePositiveInteger:function(a){a=this.validateInteger(a);return!a.isValid?a:1>a.value?{isValid:!1}:a},validateIntegerInRange:function(a,c,d){a=this.validateInteger(a);if(!a.isValid)return a;d||(d=0);return a.value<d||a.value>c?{isValid:!1}:a},validateFloat:function(b,c){var d=
-{isValid:!1,value:NaN};if(a.isStringEmpty(b))return d;var f=parseFloat(b);if(isNaN(f))return d;c||(c=2);d.isValid=!0;d.value=f.toFixed(c);return d},validateFloatInRange:function(a,c,d,f){f||(f=2);a=this.validateFloat(a,f);if(!a.isValid)return a;d||(d=0);d=d.toFixed(f);c=c.toFixed(f);return a.value<d||a.value>c?{isValid:!1}:a},validateOption:function(a,c){for(var d in a)if(Object.prototype.hasOwnProperty.call(a,d)&&d===c)return a[d];return a[a.DEFAULT]},validateColor:function(a,c){c||(c="#FFFFFF");
-if(!a)return{isValid:!1,color:c};var d=a.match(/#[0-9a-fA-F]+/),f;return(f=(f=!d||null===d||1!=d.length)||7!=d[0].length)?{isValid:!1,color:c}:{isValid:!0,color:a}},isStringEmpty:function(a){return void 0===a||""===a},isStringWithPrefixEmpty:function(b,c){return a.isStringEmpty(b)?!0:b===c},isArrayElementEmpty:function(b){if(!b)return!0;for(var c in b)if(Object.prototype.hasOwnProperty.call(b,c)&&!a.isStringEmpty(b[c]))return!1;return!0},isArrayEmpty:function(b){return!b?!0:1===b.length&&a.isArrayElementEmpty(b[0])},
-removeDuplicatesFromArray:function(a){if(0===a.length)return[];for(var c=[],d=0;d<a.length-1;d++)a[d+1]!==a[d]&&c.push(a[d]);c.push(a[a.length-1]);return c}};e.ModelValidationUtils=a})(window);(function(e){e.LoadingScreen={screens:[],create:function(a){if(a){var a=$(a),b=a.width(),c=a.height(),d=Math.floor(1E3*Math.random())+"-"+Math.floor(1E3*Math.random()),f=$(document.createElement("img"));f.attr({src:"http://www.lorepo.com/media/images/loading.gif",alt:"Loading...",id:d,position:"absolute",display:"none",border:0,padding:0,margin:0});a.append(f);f.show();f.css({top:(c-f.height())/2+"px",left:(b-f.width())/2+"px"}).hide();this.screens.push({id:d,$element:f,counter:0});return d}},getScreen:function(a){for(var b=
+{isValid:!1,value:NaN,parsedValue:NaN};if(a.isStringEmpty(b))return d;var f=parseFloat(b);if(isNaN(f))return d;c||(c=2);d.isValid=!0;d.value=f.toFixed(c);d.parsedValue=parseFloat(d.value);return d},validateFloatInRange:function(a,c,d,f){f||(f=2);a=this.validateFloat(a,f);if(!a.isValid)return a;d||(d=0);d=d.toFixed(f);c=c.toFixed(f);return a.value<d||a.value>c?{isValid:!1}:a},validateOption:function(a,c){for(var d in a)if(Object.prototype.hasOwnProperty.call(a,d)&&d===c)return a[d];return a[a.DEFAULT]},
+validateColor:function(a,c){c||(c="#FFFFFF");if(!a)return{isValid:!1,color:c};var d=a.match(/#[0-9a-fA-F]+/),f;return(f=(f=!d||null===d||1!=d.length)||7!=d[0].length)?{isValid:!1,color:c}:{isValid:!0,color:a}},isStringEmpty:function(a){return void 0===a||""===a},isStringWithPrefixEmpty:function(b,c){return a.isStringEmpty(b)?!0:b===c},isArrayElementEmpty:function(b){if(!b)return!0;for(var c in b)if(Object.prototype.hasOwnProperty.call(b,c)&&!a.isStringEmpty(b[c]))return!1;return!0},isArrayEmpty:function(b){return!b?
+!0:1===b.length&&a.isArrayElementEmpty(b[0])},removeDuplicatesFromArray:function(a){if(0===a.length)return[];for(var c=[],d=0;d<a.length-1;d++)a[d+1]!==a[d]&&c.push(a[d]);c.push(a[a.length-1]);return c}};e.ModelValidationUtils=a})(window);(function(e){e.LoadingScreen={screens:[],create:function(a){if(a){var a=$(a),b=a.width(),c=a.height(),d=Math.floor(1E3*Math.random())+"-"+Math.floor(1E3*Math.random()),f=$(document.createElement("img"));f.attr({src:"http://www.lorepo.com/media/images/loading.gif",alt:"Loading...",id:d,position:"absolute",display:"none",border:0,padding:0,margin:0});a.append(f);f.show();f.css({top:(c-f.height())/2+"px",left:(b-f.width())/2+"px"}).hide();this.screens.push({id:d,$element:f,counter:0});return d}},getScreen:function(a){for(var b=
 0,c=this.screens.length;b<c;b++)if(this.screens[b].id===a)return b;return-1},show:function(a){a=this.getScreen(a);-1!==a&&(this.screens[a].counter++,this.screens[a].$element.show())},hide:function(a){a=this.getScreen(a);-1!==a&&(0<this.screens[a].counter&&this.screens[a].counter--,0===this.screens[a].counter&&this.screens[a].$element.hide())}}})(window);(function(e){e.DOMOperationsUtils={getOuterDimensions:function(a){a=$(a);return{border:{top:parseInt(a.css("border-top-width"),10),bottom:parseInt(a.css("border-bottom-width"),10),left:parseInt(a.css("border-left-width"),10),right:parseInt(a.css("border-right-width"),10)},margin:{top:parseInt(a.css("margin-top"),10),bottom:parseInt(a.css("margin-bottom"),10),left:parseInt(a.css("margin-left"),10),right:parseInt(a.css("margin-right"),10)},padding:{top:parseInt(a.css("padding-top"),10),bottom:parseInt(a.css("padding-bottom"),
 10),left:parseInt(a.css("padding-left"),10),right:parseInt(a.css("padding-right"),10)}}},calculateOuterDistances:function(a){var b=a.border.top+a.border.bottom,b=b+(a.margin.top+a.margin.bottom),b=b+(a.padding.top+a.padding.bottom),c=a.border.left+a.border.right,c=c+(a.margin.left+a.margin.right),c=c+(a.padding.left+a.padding.right);return{vertical:b,horizontal:c}},calculateReducedSize:function(a,b){var c=DOMOperationsUtils.getOuterDimensions(b),c=DOMOperationsUtils.calculateOuterDistances(c);return{width:$(a).width()-
 c.horizontal,height:$(a).height()-c.vertical}},setReducedSize:function(a,b){var c=DOMOperationsUtils.calculateReducedSize(a,b);$(b).css({width:c.width+"px",height:c.height+"px"});return c},showErrorMessage:function(a,b,c){$(a).html(b[c])},getResourceFullPath:function(a,b){return!a||!b?void 0:a.getStaticFilesPath()+b}}})(window);(function(e){e.Serialization={serialize:function(a){if(a){var b="";$.each(a,function(a,d){var f=typeof d;if("object"===f&&$.isArray(d)){var f="array",e="";$.each(d,function(a){e+=this+"-"+typeof d[a]+","});d=e=e.slice(0,-1)}b+="["+a+":"+f+":"+d+"]"});return b}},deserialize:function(a){if(a){var b={};if(a=a.match(/[\w]+:[\w-]+:[\w,.\- ]+/g)){for(var c=0;c<a.length;c++){var d=a[c].split(":");b[d[0]]=this.convert(d[2],d[1])}return b}}},convert:function(a,b){if(a&&b)switch(b){case "string":return a;case "number":return this.isInteger(a)?
@@ -15,7 +15,7 @@ errorCode:"FL04"};if(-1!==a[e].search("-")){var g=a[e].split("-")[1],h=ModelVali
 ModelValidationUtils.removeDuplicatesFromArray(d);return{isError:!1,list:d}}}})(window);
 /**
  * Lorepo Addons Commons library
- * @version 1.6.8
+ * @version 1.6.9
  * Components:
  * - Model Validation Utils
  * - Loading Screen
